# ai_agents_projects

./: .gitignore
Extended_agent_Ollama/: config.py
Gradio_ai_research_assistent/: config.py  graphstate.py  nodes.py  runner.py
Gradio_chatbot_langchain/: gradio_chatbot_with_websearch.py  readme.txt
Gradio_ui_agents/gradio_ai_debate_club/: ai_debate_club.py  config.py  debate.py  state.py
Gradio_ui_agents/gradio_ai_research_assistent/: config.py  gradio_ui.py  helpers.py
Gradio_ui_agents/gradio_chatbot_langchain/: gradio_chatbot_with_websearch.py
Gradio_ui_agents/gradio_pdf_rag_chatbot/: config.py  document_processor.py  models.py  pdf_rag_chatbot.py  retrieval_service.py  text_utils.py
Gradio_ui_agents/gradio_simple_pdf_rag_chatbot/: simple_pdf_rag_chatbot.py
Ollama_models/: multi_agent_router_researcher_synthizer_langraph.py  simple_chat_bot_langgraph.py  simple_prompt_langchain.py
Simple_Ollama_models/: multi_agent_router_researcher_synthizer_langraph.py
ai_agent_webtool_ollama/: webtools_agent.py
ai_agents/ai_agent_webtool_ollama/: webtools_agent.py
ai_agents/ai_sentiment_ta_trader/: app.py  graph.py  market.py  requirements.txt  ta_tools.py  tests.py
ai_agents/database/: demo.sqlite
ai_agents/extended_agent_Ollama/: memory_vectorstore.py
ai_agents/extended_ltm_agent/: tools.py
ai_agents/simple_ollama_models/: simple_calc_agent_langchain.py  simple_messaging.py
ai_agents/simple_sql_agent_ollama/: config.py  prompts.py  sql_agent.py
ai_sentiment_ta_trader/: app.py  backtest.py  config.py  graph.py  prompts.py  test_markets.py  tests.py
ai_stock_forecaster/: app_nicegui.py
bi_ai_suite_wip/: main.py
crew_ai/learning/research_crew/: pyproject.toml
crew_ai/learning/research_crew/src/research_crew/: config.py  tools.py
database/: demo.sqlite
extended_sql_agent/: config.py  db.py  full.py  llm.py  nodes.py  states.py  tools.py  utils.py
gnn_llm_ledger/: main.py
gradio_coding_assistant/: app.py
graph_llm_ledger/: converter.py  paths.py
gui_chatbot_langchain/: gradio_chatbot.py  readme.txt
invoice_extraction/invoice_extraction_v2/: pyproject.toml
invoice_extraction/invoice_extraction_v2/src/: main.py
invoice_extraction/invoice_extraction_v2/src/configs/: env_settings.py
invoice_extraction/invoice_extraction_v2/src/core/: dockling_extractor.py  preprocessing.py  tools.py
invoice_extraction/invoice_extraction_v2/src/core/vectorstore/: vectorstore_chroma.py  vectorstore_factory.py
invoice_extraction/invoice_extraction_v2/src/paths/: paths.py
invoice_extraction/invoice_extraction_v2/src/tests/: test_main.py
invoice_extraction/invoice_extraction_v2/vectorstore/: chroma.sqlite3
multi_agent_gl_mapping/: multi_agent_mapping.py
multi_agent_research/multi_agent_research_v1/: README.md  pyproject.toml
multi_agent_research/multi_agent_research_v1/src/multi_agent_research_v1/: main.py
multi_agent_research/multi_agent_research_v1/src/multi_agent_research_v1/core/: state.py  workflow.py
multi_agent_research/multi_agent_research_v1/src/multi_agent_research_v1/models/: schemas.py
multi_agent_research/multi_agent_research_v1/src/multi_agent_research_v1/nodes/: planner.py  query_expansion.py  retrieval.py  summary.py  synthesis.py  verification.py
multi_agent_research/multi_agent_research_v1/src/multi_agent_research_v1/utils/: llm.py  logging_config.py  vector_store.py
multi_agent_research/multi_agent_research_v2/multi_agent_research_v2/: pyproject.toml
multi_agent_research/multi_agent_research_v2/multi_agent_research_v2/src/multi_agent_research_v2/: main.py
multi_agent_research/multi_agent_research_v2/multi_agent_research_v2/src/multi_agent_research_v2/config/: config.py
multi_agent_research/multi_agent_research_v2/multi_agent_research_v2/src/multi_agent_research_v2/core/: routers.py  state.py  workflow.py
multi_agent_research/multi_agent_research_v2/multi_agent_research_v2/src/multi_agent_research_v2/nodes/: planner.py  quality_assessor.py  retriever.py  schemas.py  summarizer.py  synthesizer.py  verificator.py  verifier.py
multi_agent_research/multi_agent_research_v2/multi_agent_research_v2/src/multi_agent_research_v2/utils/: llm.py  vectorstore.py
simple_chatbot_langchain/: chatbot.py
simple_sql_agent_ollama/: sql_agent.py
sql_agent_ollama/: README.md  config.py  init_db.py  requirements.txt  sql_agent.py  test_db.py
weather_activity_planner/: agents.py  api.py  app.py  config.py  debug_api.py  helpers.py  models.py  planner.py  test.py  tools.py  urls.py
(+70 files in other folders)
