[tool]
name = "multi_agent_research_v1"
version = "0.1.0"
description = "A multi-agent research workflow for decomposing and synthesizing research questions."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry]
dependencies = [
    "langchain-core",
    "langchain-ollama",
    "langchain-community",
    "pydantic",
    "python-dotenv",
    "faiss-cpu"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"