[project]
name = "multi-agent-research-v1"
version = "0.1.0"
description = "Multi-agent research workflow using LangGraph and LangChain"
authors = [
    {name = "Pepijn Schouten",email = "pepijn.sch@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "python-dotenv (>=1.2.0,<2.0.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "langgraph (>=1.0.1,<2.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
