[project]
name = "multi-agent-research-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Pepijn Schouten",email = "pepijn.sch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "langchain (>=1.0.2,<2.0.0)",
    "langgraph (>=1.0.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "langchain-core (>=1.0.1,<2.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "multi_agent_research_v2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
